--- a/style.css
+++ b/style.css
@@ -8,11 +8,21 @@ h2{
     font-size: 20px;
 }
 p{
-    color: orange;
+    color: blueviolet;
     text-align: left;
 }
 body{
-    background-color: brown;
+    background-color:white;
     font-family: sans-serif;
     text-align: center;
+}
+.intro{font-style: italic;
+
+}
+.author{
+    color: red;
+    font-size: 12px;
+}
+p.author{
+    font-size: 12px;
 }
